Fixed Auto Layout Issues

--- a/ChordBook/Base.lproj/Main.storyboard
+++ b/ChordBook/Base.lproj/Main.storyboard
@@ -69,26 +69,26 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="e3E-6d-vE8">
-                                <rect key="frame" x="16" y="154" width="200" height="300"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="CPX-wQ-dV2"/>
-                                    <constraint firstAttribute="width" constant="200" id="xFc-BP-7Ug"/>
-                                </constraints>
+                                <rect key="frame" x="16" y="154" width="295" height="394"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="e3E-6d-vE8" secondAttribute="trailing" constant="273" id="Bzs-bj-VKA"/>
+                            <constraint firstItem="e3E-6d-vE8" firstAttribute="leading" secondItem="bRb-Ag-N08" secondAttribute="leadingMargin" id="N3c-Ro-rz1"/>
+                            <constraint firstItem="e3E-6d-vE8" firstAttribute="top" secondItem="uCk-mt-Cdj" secondAttribute="bottom" constant="8" id="Ts4-Ol-NgQ"/>
+                            <constraint firstItem="dLL-uM-zC2" firstAttribute="top" secondItem="e3E-6d-vE8" secondAttribute="bottom" constant="8" id="Tsq-Nu-9Uw"/>
                             <constraint firstItem="uCk-mt-Cdj" firstAttribute="top" secondItem="UfX-dU-vAa" secondAttribute="bottom" constant="8" id="f1x-tb-14q"/>
                             <constraint firstItem="uCk-mt-Cdj" firstAttribute="leading" secondItem="bRb-Ag-N08" secondAttribute="leadingMargin" id="tCk-tc-lMk"/>
-                            <constraint firstItem="e3E-6d-vE8" firstAttribute="leading" secondItem="bRb-Ag-N08" secondAttribute="leadingMargin" id="yaI-cO-WVj"/>
-                            <constraint firstItem="e3E-6d-vE8" firstAttribute="top" secondItem="uCk-mt-Cdj" secondAttribute="bottom" constant="8" id="ymh-Hd-XVr"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="bottomConstraint" destination="Tsq-Nu-9Uw" id="Tb4-o5-2uL"/>
                         <outlet property="chordImageView" destination="e3E-6d-vE8" id="9Ll-ut-7ae"/>
                         <outlet property="chordNameLabel" destination="uCk-mt-Cdj" id="6d8-o2-LSf"/>
+                        <outlet property="trailingConstraint" destination="Bzs-bj-VKA" id="XdS-KH-Kwa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="orX-Wb-hXp" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -502,7 +502,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vzL-Y2-1aG" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Find Chords" image="Fret" id="QdP-4I-yHY">
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="image" keyPath="selectedImage" value="9C6329A6-081D-412F-B4E8-B131FB5574CE"/>
+                            <userDefinedRuntimeAttribute type="image" keyPath="selectedImage" value="42A949E1-F178-44ED-8D5B-358B47E61BC1"/>
                         </userDefinedRuntimeAttributes>
                     </tabBarItem>
                     <toolbarItems/>
