--- a/ChordBook/Base.lproj/Main.storyboard
+++ b/ChordBook/Base.lproj/Main.storyboard
@@ -399,11 +399,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7Tj-mV-Rur">
-                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <rect key="frame" x="0.0" y="103" width="600" height="497"/>
                                 <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fH8-cd-Rgg">
                                     <size key="itemSize" width="125" height="150"/>
-                                    <size key="headerReferenceSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
                                 </collectionViewFlowLayout>
@@ -443,30 +443,34 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PICKER_HEADER" id="VBL-AH-aoB">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick A Chord To Add" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cNc-dI-LGi">
-                                            <rect key="frame" x="195" y="10" width="211" height="29"/>
-                                            <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="25"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="centerY" secondItem="cNc-dI-LGi" secondAttribute="centerY" id="OmD-d3-I8p"/>
-                                        <constraint firstAttribute="centerX" secondItem="cNc-dI-LGi" secondAttribute="centerX" id="lH2-Tf-mEL"/>
-                                    </constraints>
-                                </collectionReusableView>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MPy-pD-v4B">
+                                <rect key="frame" x="0.0" y="20" width="600" height="85"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick A Chord To Add" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lra-O2-EqK">
+                                        <rect key="frame" x="195" y="28" width="211" height="29"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-UltraLight" family="Helvetica Neue" pointSize="25"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="85" id="BXB-cT-4ux"/>
+                                    <constraint firstAttribute="centerX" secondItem="Lra-O2-EqK" secondAttribute="centerX" id="bKI-DE-c0b"/>
+                                    <constraint firstAttribute="centerY" secondItem="Lra-O2-EqK" secondAttribute="centerY" id="lpa-KL-5Fz"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="MPy-pD-v4B" firstAttribute="top" secondItem="Bdn-9O-YfZ" secondAttribute="bottom" id="34p-md-5GN"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7Tj-mV-Rur" secondAttribute="trailing" constant="-16" id="5Ti-Gn-uDK"/>
-                            <constraint firstItem="7Tj-mV-Rur" firstAttribute="top" secondItem="Bdn-9O-YfZ" secondAttribute="bottom" id="IN1-ZW-Lwd"/>
+                            <constraint firstItem="7Tj-mV-Rur" firstAttribute="top" secondItem="Bdn-9O-YfZ" secondAttribute="bottom" constant="83" id="IN1-ZW-Lwd"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MPy-pD-v4B" secondAttribute="trailing" constant="-16" id="Jqx-Vg-fJB"/>
                             <constraint firstItem="7Tj-mV-Rur" firstAttribute="leading" secondItem="x57-Xa-xxb" secondAttribute="leadingMargin" constant="-16" id="NoR-zZ-iZf"/>
                             <constraint firstItem="Opv-4F-D88" firstAttribute="top" secondItem="7Tj-mV-Rur" secondAttribute="bottom" id="U3x-Fv-Jhi"/>
+                            <constraint firstItem="MPy-pD-v4B" firstAttribute="leading" secondItem="x57-Xa-xxb" secondAttribute="leadingMargin" constant="-16" id="pwB-vt-scJ"/>
                         </constraints>
                     </view>
                     <connections>
@@ -502,7 +506,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vzL-Y2-1aG" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Find Chords" image="Fret" id="QdP-4I-yHY">
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="image" keyPath="selectedImage" value="42A949E1-F178-44ED-8D5B-358B47E61BC1"/>
+                            <userDefinedRuntimeAttribute type="image" keyPath="selectedImage" value="0DB3B3F0-30AE-49F8-BAC8-FA451BEC2526"/>
                         </userDefinedRuntimeAttributes>
                     </tabBarItem>
                     <toolbarItems/>
